# predecessor

./: Cargo.toml  README.md
src/: error.rs  lib.rs  util.rs
